--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.1",
+    "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
