--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "github-admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ashwinpc.github.io/github-admin",
   "dependencies": {
     "@octokit/graphql": "^7.0.2",
     "@octokit/graphql-schema": "^14.45.0",
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "prettier": "^3.1.0"
   }
 }
