--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.66",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
