--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,6 @@
 # testing
 /coverage
 
-# production
-/build
-
 # misc
 .DS_Store
 .env.local
@@ -23,3 +20,7 @@ yarn-debug.log*
 yarn-error.log*
 
 .vscode
+
+.next
+next-env.d.ts
+dist
