--- a/package.json
+++ b/package.json
@@ -16,22 +16,18 @@
     "@types/react-dom": "^18.2.17",
     "mitt": "^3.0.1",
     "moment": "^2.29.4",
+    "next": "^14.1.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +48,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0",
     "prettier": "^3.1.0"
   }
 }
